--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html>
-<html style="background-color: #708a29;">
-<script src="scripts.js"></script>
-<!--------------------------------------------------------------------------------------------------------------------->
+<!DOCTYPE html>                                                                                                                  <!-- * Property of Ed Gardner --------------------------------------->
+<html style="background-color: #708a29;">                                                                                      <!-- ? https://greensourcecode.github.io/bottlesforbales/ ----------->
+<script src="scripts.js"></script>                                                                                               <!-- * Author: Mitchell Falvo; https://github.com/greensourcecode --->
+<!---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
 
 <head>
     <meta charset="utf-8" />
@@ -11,7 +11,7 @@
     <meta name="description" content="What shows up in Google" />
     <meta name="keywords" content="Bottles, Bales, Horse Sanctuary, Horse Rescue" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>                                                         <!-- ! FONTS NOT WORKING -------------------------------------------->
     <link href="https://fonts.googleapis.com/css2?family=Andada+Pro&display=swap" rel="stylesheet">
     <div class="container-fluid mb-2 border-top border-bottom border-dark ">
         <div class="row">
@@ -43,15 +43,15 @@
                       <span class="carousel-control-next-icon" aria-hidden="true"></span>
                       <span class="visually-hidden">Next</span>
                     </button>
-                  </div>                                           <!-- ! TODO -->
+                  </div>                                                                                                         
             </div>
         </div>
     </div>
 </head>
-<!--------------------------------------------------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
 
 <body style="background-color: #708a29;">
-    <div class="container-fluid mb-2 border border-dark rounded-3" style="width:97%;">                                                         <!-- ! Make wider TODO           -->
+    <div class="container-fluid mb-2 border border-dark rounded-3" style="width:97%;">                                           <!-- TODO Make wider ------------------------------------------------>
         <div class="row">
             <div class="col">
                 <h4 class="text-center fst-italic">Welcome to Bottles for Bales!!</h4>         
@@ -59,7 +59,7 @@
         </div>
         <div class="row justify-content-center">
             <div class="col">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore           <!-- ? Explain Bottles for bales ------------------------------------>
                     et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                     aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
                     cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
@@ -68,7 +68,7 @@
         </div>
         <div class="row justify-content-center">
             <div class="col">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore           <!-- ? Explain Bottles for bales ------------------------------------>
                     et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
                     aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
                     cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
@@ -85,7 +85,7 @@
         </div>
     </div>
 </body>
-<!--------------------------------------------------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
 <footer>                                              
     <div class="container-fluid mb-2 border-top border-bottom border-dark">                                 
         <div class="row">
@@ -95,25 +95,25 @@
         </div>
     </div>
 </footer>
-<!--------------------------------------------------------------------------------------------------------------------->
+<!---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------->
 
 <!-- Button trigger modal -->
 <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#myModal">
-    Test Modal                                        <!-- ! Must pop up on website launch TODO                      -->
+    Test Modal                                                                                                                   <!-- ! Must pop up on website launch -------------------------------->
 </button>
 <!-- Modal -->
 <div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-xl">
         <div class="modal-content" id="myModal2"> 
             <div class="modal-header align-self-center pb-0 " id="modalHeader">
-                <h1 class="modal-title" id="myModalLabel">Oh Hay!</h1> <!-- ! Can't Center!! TODO                    -->
+                <h1 class="modal-title" id="myModalLabel">Oh Hay!</h1>                                                           <!-- TODO Can't Center!! -------------------------------------------->
                 
             </div>
             <div class="modal-body pb-0" id="modalBody">
                 <img src="img/twoHorses.jpg" class="img-fluid rounded-3" id="twoHorsesImg" alt="Responsive image">
                 <h3 class="text-center pt-3">Would you mind donating your recyclable bottles for our hay?</h3>
             </div>
-            <div class="modal-footer align-self-center" id="modalFooter">      <!-- ! Center these buttons TODO      -->
+            <div class="modal-footer align-self-center" id="modalFooter">                                                        <!-- TODO Center these buttons -------------------------------------->
                 <button type="button" class="btn btn-success" data-bs-dismiss="modal">Sure!</button> 
                 <button type="button" class="btn btn-secondary">Who are you guys?</button>
             </div>
@@ -121,7 +121,9 @@
     </div>
 </div>
 
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"> </script>
-
+<script src="node_modules/bootstrap/dist/js/bootstrap.min.js"> </script>
 
 </html>
