--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             </div>
         </div>
     </div>
-    
-    <div id="carouselExampleIndicators" class="carousel slide wrap mb-2 mt-0 border-bottom border-top border-dark border-2 bg bg-dark opacity-75" data-bs-ride="carousel">
+    <div class="containter-fluid" id="bcLightBrown"></div>
+    <div id="carouselExampleIndicators" class="carousel slide wrap mb-2 mt-0 bg-opacity-75 border-bottom border-top border-dark border-2 bg bg-dark opacity-75" data-bs-ride="carousel">
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -56,7 +56,7 @@
 </head>
 <!--?--------------------------------------------------------------- BODY --------------------------------------------------------------------------------->
 <body class="bg-image .d-flex justify-content-center" style="background-image: url('img/twofaces.png'); height: 100vh;">
-    <div class="container-fluid mb-2  border border-dark rounded-3 bg-gradient border-2" id="containerFluidSpecial">
+    <div class="container-fluid mb-2  border border-dark rounded-3 bg-gradient border-2" id="welcome">
         <div class="row">
             <div class="col">
                 <h3 class="text-center pt-3">Welcome to BottlesForBales.org</h3>
