--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
             </div>
         </div>
     </div>
-    <div class="containter-fluid" id="bcLightBrown"></div>
+
+
+
+    <div class="containter-fluid opacity-75" id="bcLightBrown">
     <div id="carouselExampleIndicators" class="carousel slide wrap mb-2 mt-0 bg-opacity-75 border-bottom border-top border-dark border-2 bg bg-dark opacity-75" data-bs-ride="carousel">
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -52,7 +55,11 @@
             </div>
         </div>
     </div>
-    
+</div>
+
+
+
+
 </head>
 <!--?--------------------------------------------------------------- BODY --------------------------------------------------------------------------------->
 <body class="bg-image .d-flex justify-content-center" style="background-image: url('img/twofaces.png'); height: 100vh;">
@@ -63,8 +70,8 @@
             </div>
         </div>
         <div class="row justify-content-center">
-            <div class="col">
-                <!-- * Explain Bottles for bales ------------------------------------>
+            <div class="col">                                                         <!-- * Explain Bottles for bales ------------------------------------>
+                
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.
@@ -150,14 +157,13 @@
 <script src="scripts.js"></script>     
 </html>
 <!--TODO------------------------------------------------------- ROAD-MAP ---------------------------------------------------------------------------------->
-<!--! Achieve 90% opacity on regular containers               -->
-<!--! Center Images in Carousel                               -->
-<!--? Change all borders to dark brown and increase to size 3 -->
-<!--? Implement Favicons                                      -->
-<!--? Give form functionality                                 -->
-<!--? Design Logo                                             -->
-<!--? Center Background Image                                 -->
-<!--* Fix names and general refactor                          -->
-<!--* Add Eds picture                                         -->
-<!--* Add  textfield and county selector dropdown to form     -->
+
+                                    <!--! Center Images in Carousel                               -->
+                                    <!--? Implement Favicons                                      -->
+                                    <!--? Give form functionality                                 -->
+                                    <!--? Design Logo                                             -->
+                                    <!--? Center Background Image                                 -->
+                                    <!--* Fix names and general refactor                          -->
+                                    <!--* Add Eds picture                                         -->
+                                    <!--* Add textfield and county selector dropdown to form      -->
 
