--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 <body class="bg-image .d-flex justify-content-center" style="background-image: url('img/twofaces.png'); height: 100vh;">
 <!-- Form Container -->
     <div class="container-lg mb-2 border border-2 border-dark rounded-3 bg-gradient" id="containerFluid">
-        <h6 class="text-center pt-2 mt-2">Do you have bottles ready to be picked up now?</h6>
+        <h4 class="text-center pt-2 mt-2">Have bottles ready for pick up?</h4>
         <hr>
         <form>
             <div class="row">
