--- a/index.html
+++ b/index.html
@@ -135,8 +135,7 @@
                 </div>
                 <div class="col-12" <div class="mb-3 form-check">
                     <input type="checkbox" class="form-check-input mt-3 mx-2" id="exampleCheck1">
-                    <label class="form-check-label mt-3 mb-2" for="exampleCheck1">Please let me know when you are
-                        stopping by.</label>
+                    <label class="form-check-label mt-3 mb-2" for="exampleCheck1">Tell me when you're picking up.</label>
                 </div>
                 <div class="mb-2">
                     <button type="submit" class="btn btn-success">Submit</button>
