faster page loading

--- a/index.html
+++ b/index.html
@@ -13,33 +13,18 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Andada+Pro&family=Rye&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Ed Gardner's Bottles for Bales organization raised over $15,000 for Little Brook Farm Horse Sanctuary in 2021."/>
+    <meta name="description" content="Ed Wagner's Bottles for Bales organization raised over $15,000 for Little Brook Farm Horse Sanctuary in 2021."/>
     <meta name="keywords" content="Bottles, Bales, Horse Sanctuary, Horse Rescue" />
 <!-- Title Container -->
     <div class="container-fluid mb-2 border-bottom border-start border-end rounded-3 border-dark border-2 bg-gradient" id="containerFluidSpecial" >                                 
         <div class="row">
             <div class="col">
-                <h1 class="text-center" id="h1">BottlesForBales.org<link rel="icon" type="image/png" sizes="32x32" href="img/android-chrome-192x192.png"></h1>
+                <h1 class="text-center" id="h1">BottlesForBales.org 🐎<link rel="icon" type="image/png" sizes="32x32" href="img/android-chrome-192x192.png"></h1>
             </div>
         </div>
     </div>
-<!-- Greeting Container -->
-    <div class="container-lg mb-2 mt-2 border border-dark rounded-3 bg-gradient border-2" id="welcome">
-        <div class="row">
-            <div class="col">
-                <h5 class="text-center mt-3">Welcome to Bottles for Bales.</h5>
-            </div>
-        </div>
-        <div class="row justify-content-center">
-            <div class="col">                                                         <!-- * Explain Bottles for bales ------------------------------------>
-                <p>
-                    Ed Gardner's Bottles for Bales has raised over 15,000 for the Little Brook Farm horse sanctuary. If you live in Ballston Lake, Ballston Spa, Clifton Park, Cohoes, Colonie, East Greenbush, Glenville, Kinderhook, Mechanicville, Nassau, Saratoga, or Watervliet, we can pick your bottles up. If not, ask us where our nearest allied recycling facility is. 
-                </p>
-            </div>
-        </div>
-    </div>
-<!-- Carousel Container-->
-    <div class="container-lg mb-2 border border-dark border-2 rounded-3 bg-gradient bgColor-1" id="containerFluidSpecial">
+    <!-- Carousel Container-->
+    <div class="container-lg mb-2 border border-dark border-2 rounded-3 bg-gradient bgColor-1" id="containerFluid">
         <div class="row row-content">
             <div class="col mx-auto">
                 <div id="carouselExampleIndicators"
@@ -61,13 +46,11 @@
                             <img src="img/1.jpg" class="d-block w-75 h-75 mx-auto" alt="..." id="carouselImage">
                         </div>
                         <div>
-                            <button class="carousel-control-prev" type="button"
-                                data-bs-target="#carouselExampleIndicators" data-bs-slide="prev" id="carouselImage">
+                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev" id="carouselImage">
                                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                 <span class="visually-hidden">Previous</span>
                             </button>
-                            <button class="carousel-control-next" type="button"
-                                data-bs-target="#carouselExampleIndicators" data-bs-slide="next" id="carouselImage">
+                            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next" id="carouselImage">
                                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                 <span class="visually-hidden">Next</span>
                             </button>
@@ -77,12 +60,25 @@
             </div>
         </div>
     </div>
-<!-- End of <head> -->
+<!-- Greeting Container -->
+    <div class="container-lg mb-2 mt-2 border border-dark rounded-3 bg-gradient border-2" id="welcome">
+        <div class="row">
+            <div class="col">
+                <h5 class="text-center mt-3">Welcome to Bottles for Bales.</h5>
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col">                                                         <!-- * Explain Bottles for bales ------------------------------------>
+                <p>
+                    Ed Wagner's Bottles for Bales has raised over $15,000 for the Little Brook Farm horse sanctuary. If you live in Ballston Lake, Ballston Spa, Clifton Park, Cohoes, Colonie, East Greenbush, Glenville, Kinderhook, Mechanicville, Nassau, Saratoga, or Watervliet, we can pick your bottles up. If not, ask us where our nearest allied recycling facility is. 
+                </p>
+            </div>
+        </div>
+    </div>
 </head>
-
 <!--?--------------------------------------------------------------- BODY --------------------------------------------------------------------------------->
 <!-- Body / Background Image -->
-<body class="bg-image .d-flex justify-content-center" style="background-image: url('img/twofaces.png'); height: 100vh;">
+<body class="bg-image .d-flex justify-content-center" style="background-image: url('img/twofaces.jpg'); height: 100vh;">
 <!-- Form Container -->
     <div class="container-lg mb-2 border border-2 border-dark rounded-3 bg-gradient" id="containerFluid">
         <h4 class="text-center pt-2 mt-2">Have bottles ready for pick up?</h4>
@@ -145,19 +141,7 @@
             </div>
         </form>
     </div>
-
-
-
-
-
-
-
-
-
-
-<!-- End of BODY -->
 </body>
-
 <!--?--------------------------------------------------------------- FOOTER ------------------------------------------------------------------------------->
 <footer>                                              
     <div class="container-xl mb-2 border-top border-start border-end rounded-3 border-dark border-2 bgColor-1 opacity-75 bg-gradient" id="containerFluidSpecial" >                                 
@@ -176,7 +160,6 @@
         </div>
     </div>
 </footer>
-
 <!--?------------------------------------------------------------- APPENDIX ------------------------------------------------------------------------------->
 <!-- Modal -->
 <div class="modal hide fade " id="myModal" tabindex="-1" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -201,16 +184,11 @@
  integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="scripts.js"></script>     
-<!-- End of HTML -->
+<!-- End of Page -->
 </html>
-
 <!--TODO------------------------------------------------------- ROAD-MAP ---------------------------------------------------------------------------------->
-                                    <!--! Center Images in Carousel                               -->
-                                    <!--? Implement Favicons                                      -->
-                                    <!--? Give form functionality                                 -->
+                                    <!--? Implement Bootstrap Icons                               -->
                                     <!--? Design Logo                                             -->
                                     <!--? Center Background Image                                 -->
-                                    <!--? Make images not opaque                                  -->
                                     <!--* Fix names and general refactor                          -->
                                     <!--* Add Eds picture                                         -->
-                                    <!--* Add textfield and county selector dropdown to form      -->
