--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
  <!-- Links and meta -->   
     <meta charset="utf-8" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" 
-     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />  
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Andada+Pro&family=Rye&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Andada+Pro&family=Rye&display=swap" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Ed Wagner's Bottles for Bales organization raised over $15,000 for Little Brook Farm Horse Sanctuary in 2021."/>
-    <meta name="keywords" content="Bottles, Bales, Horse Sanctuary, Horse Rescue" />
+    <meta name="keywords" content="Bottles for Bales, Horse Sanctuary, Horse Rescue, Recycle" />
 <!-- Title Container -->
-    <div class="container-fluid mb-2 border-bottom border-start border-end rounded-3 border-dark border-2 bg-gradient" id="containerFluidSpecial" >                                 
+    <div class="container-fluid mb-2 border-bottom border-start border-end rounded-3 border-dark border-2 bg-gradient" id="containerFluidSpecial">                                 
         <div class="row">
             <div class="col">
-                <h1 class="text-center" id="h1">BottlesForBales.org 🐎<link rel="icon" type="image/png" sizes="32x32" href="img/android-chrome-192x192.png"></h1>
+                <h2 class="text-center pt-2" id="h1">BottlesForBales.org 🐎</h2>
             </div>
         </div>
     </div>
@@ -37,13 +37,13 @@
                     </div>
                     <div class="carousel-inner" id="carouselInner">
                         <div class="carousel-item active">
-                            <img src="img/4.jpg" class="d-block w-75 h-75 mx-auto" alt="..." id="carouselImage">
+                            <img src="img/4.jpg" class="d-block w-75 h-75 border-dark border-2 mx-auto rounded-3" alt="..." id="carouselImage">
                         </div>
                         <div class="carousel-item">
-                            <img src="img/2.jpg" class="d-block w-75 h-75 mx-auto" alt="..." id="carouselImage">
+                            <img src="img/2.jpg" class="d-block w-75 h-75 mx-auto rounded-3" alt="..." id="carouselImage">
                         </div>
-                        <div class="carousel-item rounded-3">
-                            <img src="img/1.jpg" class="d-block w-75 h-75 mx-auto" alt="..." id="carouselImage">
+                        <div class="carousel-item">
+                            <img src="img/1.jpg" class="d-block w-75 h-75 mx-auto rounded-3" alt="..." id="carouselImage">
                         </div>
                         <div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev" id="carouselImage">
@@ -129,14 +129,16 @@
                         <input type="password" class="form-control" id="bagLocation" placeholder="Bag Location">
                     </div>
                 </div>
-                <div class="col-12" <div class="mb-3 form-check">
-                    <input type="checkbox" class="form-check-input mt-3 mx-2" id="exampleCheck1">
-                    <label class="form-check-label mt-3 mb-2" for="exampleCheck1">Tell me when you're picking up.</label>
-                </div>
-                <div class="mb-2">
+                <div class="col-3">
                     <button type="submit" class="btn btn-success">Submit</button>
-                    <div id="emailHelp" class="form-text">We'll never share your information with anyone else.
                     </div>
+                <div class="col-9 ps-2 mt-0 pt-0">
+                    <input type="checkbox" class="form-check-input mt-1 mx-2" id="exampleCheck1">
+                    <label class="form-check-label mt-0 mb-0" for="exampleCheck1">Tell me when you're picking up.</label>
+                    <div id="emailHelp" class="form-text">We'll never share your information with anyone else.</div>
+                </div>
+
+                    
                 </div>
             </div>
         </form>
