--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
                 <div class="col-3">
                     <button type="submit" class="btn btn-success">Submit</button>
                     </div>
-                <div class="col-9 ps-2 mt-0 pt-0">
+                <div class="col-9 p mt-0 pt-0">
                     <input type="checkbox" class="form-check-input mt-1 mx-2" id="exampleCheck1">
-                    <label class="form-check-label mt-0 mb-0" for="exampleCheck1">Tell me when you're picking up.</label>
+                    <label class="form-check-label mt-0 mb-0" for="exampleCheck1" id="label1">Tell me when you're picking up.</label>
                     <div id="emailHelp" class="form-text">We'll never share your information with anyone else.</div>
                 </div>
 
