--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="description" content="Ed Wagner's Bottles for Bales organization raised over $15,000 for Little Brook Farm Horse Sanctuary in 2021."/>
     <meta name="keywords" content="Bottles for Bales, Horse Sanctuary, Horse Rescue, Recycle" />
 <!-- Title Container -->
-    <div class="container-fluid mb-2 border-bottom border-start border-end rounded-3 border-dark border-2 bg-gradient" id="containerFluidSpecial">                                 
+    <div class="container-xxl mb-2 border-bottom border-start border-end rounded-3 border-dark border-2 bg-gradient" id="containerDarkWide">                                 
         <div class="row">
             <div class="col">
                 <h2 class="text-center pt-2" id="h1">BottlesForBales.org 🐎</h2>
@@ -24,7 +24,7 @@
         </div>
     </div>
     <!-- Carousel Container-->
-    <div class="container-lg mb-2 border border-dark border-2 rounded-3 bg-gradient bgColor-1" id="containerFluid">
+    <div class="container-lg mb-2 border border-dark border-2 rounded-3 bg-gradient" id="containerLight">
         <div class="row row-content">
             <div class="col mx-auto">
                 <div id="carouselExampleIndicators"
@@ -61,10 +61,10 @@
         </div>
     </div>
 <!-- Greeting Container -->
-    <div class="container-lg mb-2 mt-2 border border-dark rounded-3 bg-gradient border-2" id="welcome">
+    <div class="container-lg mb-2 mt-2 border border-dark rounded-3 bg-gradient border-2" id="containerDark">
         <div class="row">
             <div class="col">
-                <h5 class="text-center mt-3">Welcome to Bottles for Bales.</h5>
+                <h5 class="text-center mt-2 mb-1">Welcome to Bottles for Bales.</h5>
             </div>
         </div>
         <div class="row justify-content-center">
@@ -80,9 +80,8 @@
 <!-- Body / Background Image -->
 <body class="bg-image .d-flex justify-content-center" style="background-image: url('img/twofaces.jpg'); height: 100vh;">
 <!-- Form Container -->
-    <div class="container-lg mb-2 border border-2 border-dark rounded-3 bg-gradient" id="containerFluid">
-        <h4 class="text-center pt-2 mt-2">Have bottles ready for pick up?</h4>
-        <hr>
+    <div class="container-lg mb-2 border border-2 border-dark rounded-3 bg-gradient" id="containerLight">
+        <h5 class="text-center pt-2 mt-1">Have bottles ready for pick up?</h5>
         <form>
             <div class="row">
                 <div class="col-sm-12 col-lg-4">
@@ -129,34 +128,32 @@
                         <input type="password" class="form-control" id="bagLocation" placeholder="Bag Location">
                     </div>
                 </div>
-                <div class="col-3">
-                    <button type="submit" class="btn btn-success">Submit</button>
-                    </div>
-                <div class="col-9 p mt-0 pt-0">
-                    <input type="checkbox" class="form-check-input mt-1 mx-2" id="exampleCheck1">
-                    <label class="form-check-label mt-0 mb-0" for="exampleCheck1" id="label1">Tell me when you're picking up.</label>
-                    <div id="emailHelp" class="form-text">We'll never share your information with anyone else.</div>
+                <div class="col-3 col-md-2 col-lg-1">
+                    <button type="submit" class="btn btn-success mx-2">Submit</button>
                 </div>
-
-                    
+                <div class="col-9 p mt-0 pt-0">
+                    <input type="checkbox" class="form-check-input mt-1 mx-3" id="exampleCheck1">
+                    <label class="form-check-label mt-0 mb-0" for="exampleCheck1" id="textSmall">Tell me when you're picking up.</label>
+                    <div class="form-text mt-0 mx-4" id="textSmall">We'll never share your information.</div>
                 </div>
             </div>
         </form>
     </div>
 </body>
 <!--?--------------------------------------------------------------- FOOTER ------------------------------------------------------------------------------->
+<!---->
 <footer>                                              
-    <div class="container-xl mb-2 border-top border-start border-end rounded-3 border-dark border-2 bgColor-1 opacity-75 bg-gradient" id="containerFluidSpecial" >                                 
+    <div class="container-xl mb-2 border-top border-start border-end rounded-3 border-dark border-2 bg-gradient" id="containerDarkWide" >                                 
         <div class="row">
             <div class="col-12 text-center">
-                <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
-                    <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
+                <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone-fill" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"/>
                   </svg></a>
                 <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
                     <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z"/>
                   </svg></a>
-                  <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-twitter" viewBox="0 0 16 16">
-                    <path d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z"/>
+                  <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
+                    <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
                   </svg></a>
             </div>
         </div>
@@ -166,7 +163,7 @@
 <!-- Modal -->
 <div class="modal hide fade " id="myModal" tabindex="-1" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-xl border border-2 border-dark rounded-3">
-        <div class="modal-content" id="bgColor-1"> 
+        <div class="modal-content" id="modalContent"> 
             <div class="modal-header align-self-center pb-0 " id="modalHeader">
                 <h1 class="modal-title text-dark" id="myModalLabel">Oh Hay!</h1>                
             </div>
