--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="description" content="Ed Wagner's Bottles for Bales organization raised over $15,000 for Little Brook Farm Horse Sanctuary in 2021."/>
     <meta name="keywords" content="Bottles for Bales, Horse Sanctuary, Horse Rescue, Recycle" />
 <!-- Title Container -->
-    <div class="container-xxl mb-2 border-bottom border-start border-end rounded-3 border-dark border-2 bg-gradient" id="containerDarkWide">                                 
+    <div class="container-xxl mb-2 border-bottom border-start border-end rounded-3 border-dark border-2 bg-gradient" id="containerDark">                                 
         <div class="row">
             <div class="col">
                 <h2 class="text-center pt-2" id="h1">BottlesForBales.org 🐎</h2>
@@ -143,7 +143,7 @@
 <!--?--------------------------------------------------------------- FOOTER ------------------------------------------------------------------------------->
 <!---->
 <footer>                                              
-    <div class="container-xl mb-2 border-top border-start border-end rounded-3 border-dark border-2 bg-gradient" id="containerDarkWide" >                                 
+    <div class="container-xl mb-2 border-top border-start border-end rounded-3 border-dark border-2 bg-gradient" id="containerDark" >                                 
         <div class="row">
             <div class="col-12 text-center">
                 <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone-fill" viewBox="0 0 16 16">
