beginning of refactor

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <meta name="description" content="Ed Wagner's Bottles for Bales organization raised over $15,000 for Little Brook Farm Horse Sanctuary in 2021."/>
     <meta name="keywords" content="Bottles for Bales, Horse Sanctuary, Horse Rescue, Recycle" />
 <!-- Title Container -->
-    <div class="container-xxl mb-2 border-bottom border-start border-end rounded-3 border-dark border-2 bg-gradient" id="containerDark">                                 
+    <div class="container-xxl mb-2 mt-1 rounded-3 border border-dark border-2 bg-gradient" id="containerDark">                                 
         <div class="row">
             <div class="col">
-                <h2 class="text-center pt-2" id="h1">BottlesForBales.org 🐎</h2>
+                <h3 class="text-center pt-2" id="h1">BottlesForBales.org 🐎</h3>
             </div>
         </div>
     </div>
@@ -78,7 +78,7 @@
 </head>
 <!--?--------------------------------------------------------------- BODY --------------------------------------------------------------------------------->
 <!-- Body / Background Image -->
-<body class="bg-image .d-flex justify-content-center" style="background-image: url('img/twofaces.jpg'); height: 100vh;">
+<body>
 <!-- Form Container -->
     <div class="container-lg mb-2 border border-2 border-dark rounded-3 bg-gradient" id="containerLight">
         <h5 class="text-center pt-2 mt-1">Have bottles ready for pick up?</h5>
@@ -143,7 +143,7 @@
 <!--?--------------------------------------------------------------- FOOTER ------------------------------------------------------------------------------->
 <!---->
 <footer>                                              
-    <div class="container-xl mb-2 border-top border-start border-end rounded-3 border-dark border-2 bg-gradient" id="containerDark" >                                 
+    <div class="container-xl mb-1 rounded-3 border border-dark border-2 bg-gradient" id="containerDark" >                                 
         <div class="row">
             <div class="col-12 text-center">
                 <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone-fill" viewBox="0 0 16 16">
