experiment with bg image

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 </head>
 <!--?--------------------------------------------------------------- BODY --------------------------------------------------------------------------------->
 <!-- Body / Background Image -->
-<body>
+<body id="body">
 <!-- Form Container -->
     <div class="container-lg mb-2 border border-2 border-dark rounded-3 bg-gradient" id="containerLight">
         <h5 class="text-center pt-2 mt-1">Have bottles ready for pick up?</h5>
