background image fix

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>                                                                                <!-- ? https://bottlesforbales.org ---------------------------------->
                                                                                       <!-- - Author: Mitchell Falvo; https://github.com/greensourcecode --->
 <!--? ------------------------------------------------------------------ HEAD ----------------------------------------------------------------------------->
+
 <head>
  <!-- Links and meta -->   
     <meta charset="utf-8" />
@@ -15,6 +16,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Ed Wagner's Bottles for Bales organization raised over $15,000 for Little Brook Farm Horse Sanctuary in 2021."/>
     <meta name="keywords" content="Bottles for Bales, Horse Sanctuary, Horse Rescue, Recycle" />
+
+
+
 <!-- Title Container -->
     <div class="container-xxl mb-2 mt-1 rounded-3 border border-dark border-2 bg-gradient" id="containerDark">                                 
         <div class="row">
@@ -78,7 +82,7 @@
 </head>
 <!--?--------------------------------------------------------------- BODY --------------------------------------------------------------------------------->
 <!-- Body / Background Image -->
-<body id="body">
+<body id="body" class="bg-image" style="background-image: url('img/twofaces.jpg'); height: 100vh; background-repeat: no-repeat; background-attachment: fixed;">
 <!-- Form Container -->
     <div class="container-lg mb-2 border border-2 border-dark rounded-3 bg-gradient" id="containerLight">
         <h5 class="text-center pt-2 mt-1">Have bottles ready for pick up?</h5>
