--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 <!--?--------------------------------------------------------------- FOOTER ------------------------------------------------------------------------------->
 <!---->
 <footer>                                              
-    <div class="container-xl mb-1 rounded-3 border border-dark border-2 bg-gradient" id="containerDark" >                                 
+    <div class="container-xxl mb-1 rounded-3 border border-dark border-2 bg-gradient" id="containerDark" >                                 
         <div class="row">
             <div class="col-12 text-center">
                 <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone-fill" viewBox="0 0 16 16">
@@ -165,13 +165,13 @@
 </footer>
 <!--?------------------------------------------------------------- APPENDIX ------------------------------------------------------------------------------->
 <!-- Modal -->
-<div class="modal hide fade " id="myModal" tabindex="-1" aria-labelledby="myModalLabel" aria-hidden="true">
+<div class="modal hide fade" tabindex="-1" id="introModal">
     <div class="modal-dialog modal-xl border border-2 border-dark rounded-3">
         <div class="modal-content" id="modalContent"> 
-            <div class="modal-header align-self-center pb-0 " id="modalHeader">
-                <h1 class="modal-title text-dark" id="myModalLabel">Oh Hay!</h1>                
+            <div class="modal-header align-self-center pb-0 ">
+                <h1 class="modal-title text-dark">Oh Hay!</h1>                
             </div>
-            <div class="modal-body pb-0" id="modalBody">
+            <div class="modal-body pb-0 align-self-center" id="modalBody">
                 <img src="img/twoHorses.jpg" class="img-fluid rounded-3" id="twoHorsesImg" alt="Responsive image">
                 <h3 class="text-center pt-3 text-dark">Would you mind donating your recyclable bottles for our hay?</h3>
             </div>
@@ -190,8 +190,11 @@
 <!-- End of Page -->
 </html>
 <!--TODO------------------------------------------------------- ROAD-MAP ---------------------------------------------------------------------------------->
-                                    <!--? Implement Bootstrap Icons                               -->
-                                    <!--? Design Logo                                             -->
-                                    <!--? Center Background Image                                 -->
-                                    <!--* Fix names and general refactor                          -->
-                                    <!--* Add Eds picture                                         -->
+                                    <!--? Implement More Bootstrap Icons                            -->
+                                    <!--? Design Logo                                               -->
+                                    <!--? Center Modal Image in large screens                       -->
+                                    <!--? Add form functionality                                    -->
+                                    <!--? Add about us (little brook) and drop off locations (maps) -->
+                                    <!--? Add google maps of drop off locations                     -->
+                                    <!--* Fix names and general refactor                            -->
+                                    <!--* Add Eds picture                                           -->
