--- a/index.html
+++ b/index.html
@@ -16,9 +16,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Ed Wagner's Bottles for Bales organization raised over $15,000 for Little Brook Farm Horse Sanctuary in 2021."/>
     <meta name="keywords" content="Bottles for Bales, Horse Sanctuary, Horse Rescue, Recycle" />
-
-
-
 <!-- Title Container -->
     <div class="container-xxl mb-2 mt-1 rounded-3 border border-dark border-2 bg-gradient" id="containerDark">                                 
         <div class="row">
@@ -41,13 +38,13 @@
                     </div>
                     <div class="carousel-inner" id="carouselInner">
                         <div class="carousel-item active">
-                            <img src="img/4.jpg" class="d-block w-75 h-75 border-dark border-2 mx-auto rounded-3" alt="..." id="carouselImage">
+                            <img src="img/4.jpg" class="d-block w-75 h-75 border-dark border-2 mx-auto rounded-3" alt="..." id="carouselImage" />
                         </div>
                         <div class="carousel-item">
-                            <img src="img/2.jpg" class="d-block w-75 h-75 mx-auto rounded-3" alt="..." id="carouselImage">
+                            <img src="img/2.jpg" class="d-block w-75 h-75 mx-auto rounded-3" alt="..." id="carouselImage" />
                         </div>
                         <div class="carousel-item">
-                            <img src="img/1.jpg" class="d-block w-75 h-75 mx-auto rounded-3" alt="..." id="carouselImage">
+                            <img src="img/1.jpg" class="d-block w-75 h-75 mx-auto rounded-3" alt="..." id="carouselImage" />
                         </div>
                         <div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev" id="carouselImage">
@@ -150,13 +147,13 @@
     <div class="container-xxl mb-1 rounded-3 border border-dark border-2 bg-gradient" id="containerDark" >                                 
         <div class="row">
             <div class="col-12 text-center">
-                <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone-fill" viewBox="0 0 16 16">
+                <a class="btn btn-social-icon btn-twitter" href="http://gmail.com/"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone-fill" viewBox="0 0 16 16">
                     <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"/>
                   </svg></a>
-                <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
+                <a class="btn btn-social-icon btn-twitter" href="http://gmail.com/"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
                     <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z"/>
                   </svg></a>
-                  <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
+                  <a class="btn btn-social-icon btn-twitter" href="http://facebook.com/"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
                     <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
                   </svg></a>
             </div>
